--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "guess-number-game",
   "version": "0.0.1",
   "description": "Small game for testing",
-  "main": "index.js",
+  "source": "index.html",
   "scripts": {
-    "start": "node ./index.js",
+    "start": "parcel",
     "test": "node node_modules/jest/bin/jest.js"
   },
   "repository": {
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/ellementul/guess-number-game#readme",
   "dependencies": {
-    "@ellementul/united-events-environment": "^1.2.0",
     "@ellementul/uee-timeticker": "^1.3.0",
-    "console-questions": "^1.1.1"
+    "@ellementul/uee-ws-browser-transport": "^0.5.1",
+    "@ellementul/united-events-environment": "^1.2.0"
   },
   "devDependencies": {
-    "jest": "^29.3.1"
+    "events": "^3.3.0",
+    "jest": "^29.3.1",
+    "parcel": "^2.8.3",
+    "process": "^0.11.10"
   }
 }
