--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   "dependencies": {
     "@ellementul/uee-timeticker": "^1.3.0",
     "@ellementul/uee-ws-browser-transport": "^0.5.1",
-    "@ellementul/united-events-environment": "^1.2.0"
+    "@ellementul/united-events-environment": "^1.2.0",
+    "pixi.js": "^7.2.4"
   },
   "devDependencies": {
-    "events": "^3.3.0",
     "jest": "^29.3.1",
     "parcel": "^2.8.3",
-    "process": "^0.11.10"
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1"
   }
 }
