--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "source": "index.html",
   "scripts": {
     "start": "parcel",
+    "copy-img": "cp -vR ./img ./dist",
     "test": "node node_modules/jest/bin/jest.js"
   },
   "repository": {
@@ -25,11 +26,14 @@
     "@ellementul/uee-timeticker": "^1.3.0",
     "@ellementul/uee-ws-browser-transport": "^0.5.1",
     "@ellementul/united-events-environment": "^1.2.0",
+    "@pixi/layout": "^0.1.8",
+    "@pixi/ui": "^0.7.0",
     "pixi.js": "^7.2.4"
   },
   "devDependencies": {
     "jest": "^29.3.1",
     "parcel": "^2.8.3",
+    "process": "^0.11.10",
     "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1"
   }
