--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   "dependencies": {
     "@ellementul/uee-timeticker": "^1.3.0",
     "@ellementul/uee-ws-browser-transport": "^0.5.1",
-    "@ellementul/united-events-environment": "^1.2.0",
+    "@ellementul/united-events-environment": "^1.2.1",
     "@pixi/layout": "^0.1.8",
     "@pixi/ui": "^0.7.0",
-    "pixi.js": "^7.2.4"
+    "pixi.js": "^7.2.4",
+    "planck": "^1.0.0-alpha.4"
   },
   "devDependencies": {
     "jest": "^29.3.1",
