--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ellementul/uee-timeticker": "^1.3.0",
     "@ellementul/uee-ws-browser-transport": "^0.5.1",
     "@ellementul/united-events-environment": "^1.2.1",
+    "@js-basics/vector": "^2.0.12",
     "@pixi/layout": "^0.1.8",
     "@pixi/ui": "^0.7.0",
     "pixi.js": "^7.2.4",
