--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "guess-number-game",
-  "version": "0.0.1",
+  "name": "uee-physic-demo",
+  "version": "0.6.0",
   "description": "Small game for testing",
   "source": "index.html",
   "scripts": {
