--- a/package.json
+++ b/package.json
@@ -27,11 +27,8 @@
     "@ellementul/uee-ws-browser-transport": "^0.5.1",
     "@ellementul/united-events-environment": "^1.2.1",
     "@js-basics/vector": "^2.0.12",
-    "@pixi/layout": "^0.1.8",
-    "@pixi/ui": "^0.7.0",
     "detect-collisions": "^8.0.5",
-    "pixi.js": "^7.2.4",
-    "planck": "^1.0.0-alpha.4"
+    "pixi.js": "^7.2.4"
   },
   "devDependencies": {
     "jest": "^29.3.1",
